--- a/sass.html
+++ b/sass.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./flex.css">
+    <link rel="stylesheet" href="image.css">
 </head>
 <body>
     <ul class="lists">
@@ -25,5 +26,6 @@
         <div class="box3"></div>
         <div class="box4"></div>
     </div>
+
 </body>
 </html>
