ボタンを追加

--- a/sass.html
+++ b/sass.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./flex.css">
     <link rel="stylesheet" href="image.css">
+    <link rel="stylesheet" href="button.css">
 </head>
 <body>
     <ul class="lists">
@@ -26,6 +27,8 @@
         <div class="box3"></div>
         <div class="box4"></div>
     </div>
-
+    <div class ="button">
+       <button>テストボタン</button>
+    </div>
 </body>
 </html>
