--- a/sass.html
+++ b/sass.html
@@ -27,8 +27,21 @@
         <div class="box3"></div>
         <div class="box4"></div>
     </div>
-    <div class ="button">
+    <div class ="button2">
        <button>テストボタン</button>
     </div>
+
+    <ul class="scss-lists">
+        <li><a href="#" class="active">リンクA</a></li>
+        <li><a href="#">リンクB</a></li>
+        <li class="active"><a href="#">リンクC</a></li>
+        <li><a href="#">リンクD</a></li>
+        <li><a href="#">リンクE</a></li>
+    </ul>
+
+    
+
+
+
 </body>
 </html>
