stash コマンドを練習

--- a/sass.html
+++ b/sass.html
@@ -38,6 +38,9 @@
         <li><a href="#">リンクD</a></li>
         <li><a href="#">リンクE</a></li>
     </ul>
+    <div class ="stash">
+       <button>stash</button>
+    </div>
 
     
 
