stash コマンドを練習

--- a/sass.html
+++ b/sass.html
@@ -42,7 +42,8 @@
        <button>stash</button>
     </div>
     <div class ="stash-sass">
-    
+    </div>
+    <div class ="card-items">
     </div>
 
     
