番目系のCSSの記述をトライ

--- a/sass.html
+++ b/sass.html
@@ -11,22 +11,17 @@
     <link rel="stylesheet" href="button.css">
 </head>
 <body>
-    <ul class="lists">
-        <li><a href="#" class="active">リスト１</a></li>
+    <!-- <ul class="number">
+        <li><a href="#" class="active">リスト２</a></li>
         <li><a href="#" class="active">リスト２</a></li>
         <li><a href="#" class="active">リスト３</a></li>
         <li><a href="#" class="active">リスト４</a></li>
         <li><a href="#" class="active">リスト５</a></li>
-      </ul>
-    <div class="image">
+      </ul> -->
+    <!-- <div class="image">
         <img src="./image/IMG_0131.JPG" alt="イメージ">
     </div>
-    <div class="flexbox">
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
-    </div>
+
     <div class ="button2">
        <button>テストボタン</button>
     </div>
@@ -44,10 +39,15 @@
     <div class ="stash-sass">
     </div>
     <div class ="card-items">
+    </div> -->
+
+
+    <div class="flexbox">
+        <li><div class="box1"></div></li>
+        <li><div class="box2"></div></li>
+        <li><div class="box3"></div></li>
+        <li><div class="box4"></div></li>
     </div>
-
-    
-
 
 
 </body>
